--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "main": "server.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "tsx watch src/server.ts"
+    "dev": "tsx watch src/server.ts",
+    "prisma:migrate": "npx prisma migrate dev"
   },
   "author": "miqueias alves",
   "license": "ISC",
   "devDependencies": {
+    "@types/body-parser": "^1.19.5",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^4.17.21",
     "@types/node": "^22.5.1",
@@ -17,7 +19,10 @@
     "typescript": "^5.5.4"
   },
   "dependencies": {
+    "@prisma/client": "^5.19.0",
+    "body-parser": "^1.20.2",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "prisma": "^5.19.0"
   }
 }
