--- a/package.json
+++ b/package.json
@@ -11,18 +11,28 @@
   "author": "miqueias alves",
   "license": "ISC",
   "devDependencies": {
+    "@types/axios": "^0.9.36",
     "@types/body-parser": "^1.19.5",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^4.17.21",
+    "@types/joi": "^17.2.2",
     "@types/node": "^22.5.1",
+    "@types/uuid": "^10.0.0",
     "tsx": "^4.19.0",
     "typescript": "^5.5.4"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.17.1",
     "@prisma/client": "^5.19.0",
+    "axios": "^1.7.5",
     "body-parser": "^1.20.2",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "prisma": "^5.19.0"
+    "fs": "^0.0.1-security",
+    "joi": "^17.13.3",
+    "moment": "^2.30.1",
+    "path": "^0.12.7",
+    "prisma": "^5.19.0",
+    "uuid": "^10.0.0"
   }
 }
